landscape mobile fix for right aligned narrow callouts

--- a/web/themes/custom/myusf/sass/src/partials/_wysiwyg.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_wysiwyg.scss
@@ -275,7 +275,7 @@ blockquote {
 		&.block_right {
 			margin: 0.375rem 0 1.75rem 1.25rem;
 
-			@include media-breakpoint-down(phone)  {
+			@include media-breakpoint-down(tablet)  {
 				margin: .375rem 0 1.75rem 0;
 			}
 		}
@@ -303,7 +303,7 @@ blockquote {
 		&.block_right {
 			margin: 0.375rem 0 1.56rem 1.25rem;
 
-			@include media-breakpoint-down(phone)  {
+			@include media-breakpoint-down(tablet)  {
 				margin: .375rem 0 1.75rem 0;
 			}
 		}
